# crose

./: CMakeLists.txt  CRose.cbp  CRose.depend  CRose.layout  Makefile  README.md  main.c
lib/: librose.h  rosectype.h
rosec/: rosec.py
scripts/: build.bat  build.nu  build.ps1  build.sh
tests/: example.rose
tests/Utils/: Math.rose  Player.rose
